--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "repository": "https://github.com/chlbri/gitpod-typescript.git",
   "dependencies": {
     "@bemedev/fstate": "^0.0.2",
+    "@xstate/immer": "^0.3.1",
     "xstate": "^4.30.6",
     "zod": "^3.14.3"
   }
