--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "https://github.com/chlbri/gitpod-typescript.git",
   "author": "chlbri <bri_lvi@icloud.com>",
   "license": "MIT",
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "main": "index.ts",
   "scripts": {
     "tsc": "tsc",
     "build": "pnpm run tsc && pnpm run lint",
